--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_pet
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=parolaeratusca
 spring.flyway.clean-on-validation-error=true
 logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=WARN
 a1.repository-type=JDBC
